# peak

./: README.md  pyproject.toml
.github/workflows/: test.yaml
peak/: _cli.py  peak.py
tests/: test_peak.py
